--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "c081b6ef-9207-46b8-8740-f4cb61f5b9d6"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
